--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "client": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
     "start": "cd backend && npm start",
-    "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "postinstall": "npm run install-all",
+    "install-all": "cd backend && npm install && cd ../frontend && npm install",
+    "build:production": "npm install && npm run install-all && npm run build",
     "heroku-postbuild": "npm run build",
     "test": "echo \"No tests specified\" && exit 0",
     "lint": "echo \"Linting not configured\" && exit 0"
