--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     region: oregon
-    buildCommand: npm run install-all && npm run build
+    buildCommand: npm run build:production
     startCommand: npm start
     healthCheckPath: /health
     envVars:
