Fix vite build error - move to dependencies

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd backend && npm run dev",
     "client": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
+    "build": "node build-frontend.js",
     "start": "cd backend && npm start",
     "install-all": "cd backend && npm install && cd ../frontend && npm install",
-    "build:production": "npm install && npm run install-all && npm run build",
+    "build:production": "npm install && cd backend && npm install && cd ../frontend && npm install && cd .. && npm run build",
     "heroku-postbuild": "npm run build",
-    "test": "echo \"No tests specified\" && exit 0",
+    "test": "node test-build.js",
+    "test-build": "node test-build.js",
     "lint": "echo \"Linting not configured\" && exit 0"
   },
   "keywords": ["react", "nodejs", "mongodb", "activity-tracker", "team-management", "fullstack"],
