--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "npx vite",
+    "build": "npx vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "npx vite preview",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
@@ -16,20 +16,20 @@
     "react-router-dom": "^6.20.1",
     "axios": "^1.6.2",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.1.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.1.1",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0"
+    "eslint-plugin-react-refresh": "^0.4.4"
   },
   "engines": {
     "node": ">=18.0.0",
