--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     region: oregon
-    buildCommand: npm install && cd backend && npm install && cd ../frontend && npm install && npx vite build && cd ..
+    buildCommand: npm install && cd backend && npm install && cd ../frontend && npm install && npx vite build && cd .. && node verify-build.js
     startCommand: npm start
     healthCheckPath: /health
     envVars:
